demos/tweeter/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: tweeter
  name: tweeter-frontend
  labels:
    app: tweeter
    tier: frontend
spec:
  # if your cluster supports it, change the following to "LoadBalancer" to
  # automatically create an external load-balanced IP for the frontend service.
  type: NodePort
  ports:
  - port: 80 # the port that this service should serve on
    targetPort: 3000 # the port that this service should serve on
  selector:
    app: tweeter
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: tweeter
  name: tweeter-frontend
spec:
  # this replicas value is default
  # modify it according to your case
  replicas: 2
  template:
    metadata:
      labels:
        app: tweeter
        tier: frontend
    spec:
      containers:
      - name: tweeter-frontend
        image: aisrael/tweeter:ca8069adb7fea54ff687e5162f72d13a457e13db
        ports:
        - containerPort: 3000
