demos/tweeter/mongo.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: tweeter
    tier: db
    db: mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tweeter
        tier: db
        db: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: tweeter
spec:
  type: NodePort
  selector:
    app: tweeter
    tier: db
    db: mongo
  ports:
    - port: 27017
