demos/tweeter/postgres.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: tweeter
    tier: db
    db: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tweeter
        tier: db
        db: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: tweeter
spec:
  type: NodePort
  selector:
    app: tweeter
    tier: db
    db: postgres
  ports:
    - port: 5432
